// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test PathPreviewButton has WebGL no devices connected in desktop version 1`] = `
<div>
  <div
    class="button highlighted"
    title="Path Preview"
  >
    <svgr-url />
  </div>
</div>
`;

exports[`test PathPreviewButton has WebGL no devices connected in web version 1`] = `
<div>
  <div
    class="button disabled highlighted"
    title="Path Preview"
  >
    <svgr-url />
  </div>
</div>
`;

exports[`test PathPreviewButton no WebGL 1`] = `<div />`;

exports[`test PathPreviewButton workarea is Ador should not render 1`] = `<div />`;
